--- a/src/main/webapp/WEB-INF/CSS/currency.css
+++ b/src/main/webapp/WEB-INF/CSS/currency.css
@@ -24,3 +24,12 @@
     padding: 10px 0;
     background-color: #f9fafc;
 }
+.el-header {
+    background-color: #B3C0D1;
+    color: #333;
+    line-height: 60px;
+}
+
+.el-aside {
+    color: #333;
+}
