--- a/src/main/webapp/WEB-INF/CSS/currency.css
+++ b/src/main/webapp/WEB-INF/CSS/currency.css
@@ -33,3 +33,8 @@
 .el-aside {
     color: #333;
 }
+
+.el-menu-vertical-demo:not(.el-menu--collapse) {
+    width: 200px;
+    min-height: 400px;
+}
